test/expected/explain_fau_v-c++17.out
explain void f(auto)
               ^
16: error: parameters can not be "auto" until C++20
